--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                   <!-- Имя -->
                   <div class="Il'vir">
                      <div>Il'vir</div>
-                     <div>Valiev</div>
+                     <div>Valiev QA</div>
                   </div>
                   <div>
                      <div class="list"><span>age</span><span>:</span><span>32</span></div>
